# crates_tester

./: .gitignore  Cargo.toml  README.md
src/: image.rs  infer.rs  infer_single.rs  lofty_validation.rs  main.rs  mime_check_extensions.rs  ooxml.rs  pdf.rs  symphonia.rs  zip.rs
