[package]
name = "test_thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
rayon = "1.5.2"
lofty = {git = "https://github.com/Serial-ATA/lofty-rs/"}
mime_guess = { git = "https://github.com/abonander/mime_guess" }
infer = {git = "https://github.com/bojand/infer"}