[package]
name = "crates_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
rayon = "1.5"

lofty = { git = "https://github.com/Serial-ATA/lofty-rs/" }
#lofty = ""
mime_guess = { git = "https://github.com/abonander/mime_guess" }
#mime_guess = ""
infer = { git = "https://github.com/bojand/infer" }
#infer = ""
image = { git = "https://github.com/image-rs/image" }
#image = ""
zip = { git = "https://github.com/zip-rs/zip", features=[] }
#zip = ""
symphonia = {git = "https://github.com/pdeljanov/Symphonia", features=["mp3","aac","alac","flac","isomp4","mkv","ogg","pcm","vorbis","wav"]}
#symphonia = {version="0.5", features=["mp3","aac","alac","flac","isomp4","mkv","ogg","pcm","vorbis","wav"]}
#ooxml = {git = "https://github.com/zitsen/ooxml-rs" }
#ooxml = ""
pdf = {git = "https://github.com/pdf-rs/pdf/"}
#pdf = ""

[profile.release]
# Panic = "abort" will crash entire app when processing invalid image file.
# Since crash happens in external library, this is only way to handle this(I think).
panic = "unwind"
